--- a/mddf-lib/src/com/movielabs/mddf/resources/structure_manifest_v1.8.json
+++ b/mddf-lib/src/com/movielabs/mddf/resources/structure_manifest_v1.8.json
@@ -13,11 +13,10 @@
 					"severity": "Error",
 					"xpath": ".[@condition='Acquired']",
 					"msg": "@licenseType is only valid when @condition is 'Acquired'"
-
 				}
 			]
 		},
-		
+
 		"TrackSelectionNumber": 
 		{
 			"targetPath": ".//{manifest}Presentation",
@@ -29,10 +28,42 @@
 					"severity": "Error",
 					"xpath": "./{manifest}TrackMetadata[{manifest}TrackSelectionNumber='0']",
 					"msg": "Must have exactly 1 instance of TrackMetadata with TrackSelectionNumber='0' per Presentation"
+				}
+			]
+		},
 
+		"Metadata": 
+		{
+			"targetPath": "./{manifest}Inventory/{manifest}Metadata",
+			"constraint": 
+			[
+				{
+					"min": "1",
+					"xpath": 
+					[
+						"./{manifest}ContainerReference",
+						"./{manifest}BasicMetadata",
+						"./{manifest}Alias"
+					]
+				}
+			]
+		},
+
+		"ContainerRef": 
+		{
+			"targetPath": ".//{manifest}ContainerReference",
+			"constraint": 
+			[
+				{
+					"min": "1",
+					"xpath": 
+					[
+						"./{manifest}ContainerIdentifier",
+						"./{manifest}ContainerLocation",
+						"./{manifest}ParentContainer"
+					]
 				}
 			]
 		}
- 
 	}
 }
