--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-lib</artifactId>
-	<version>${mddf.src.tag}</version>
+	<version>1.5</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
 
 	<properties>
-		<mddf.src.tag>1.5</mddf.src.tag>
-		<mddf.build>1</mddf.build>
-		<timestamp>${maven.build.timestamp}</timestamp>
+		<mddf.lib.version>${project.version}</mddf.lib.version> 
+		<mddf.lib.build>3</mddf.lib.build>
+		<mddf.lib.timestamp>${maven.build.timestamp}</mddf.lib.timestamp>
 		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
 	</properties>
 
