added profile for deployment of SNAPSHOT to Maven Central

--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.5.1.rc4-SNAPSHOT</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
-
+	<url>https://github.com/MovieLabs/mddf</url>
 	<properties>
 		<mddf.lib.version>${project.version}</mddf.lib.version>
 		<mddf.lib.build>4</mddf.lib.build>
@@ -123,6 +123,48 @@
 	</dependencies>
 
 	<profiles>
+		<profile>
+			<id>snapshot</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<distributionManagement>
+				<snapshotRepository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				</snapshotRepository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.7</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>release</id>
 			<activation>
@@ -288,5 +330,4 @@
 		<url>scm:git:https://github.com/MovieLabs/mddf.git</url>
 	</scm>
 
-	<url>https://github.com/MovieLabs/mddf</url>
 </project>
