ug Fix: Translation of Avails to XML dropped non-EIDR EpisodeTitleID

--- a/mddf-lib/src/com/movielabs/mddflib/avails/xml/MetadataMappings.json
+++ b/mddf-lib/src/com/movielabs/mddflib/avails/xml/MetadataMappings.json
@@ -241,6 +241,16 @@
 								"filterEidr": "yes"
 							}
 						}
+					},{
+						"%FUNCTION": 
+						{
+							"name": "altId",
+							"args": 
+							{
+								"col": "AvailMetadata/EpisodeTitleID",
+								"filterEidr": "yes"
+							}
+						}
 					},
 					{
 						"%FUNCTION": 
@@ -273,6 +283,7 @@
 							"args": 
 							{
 								"col": "AvailMetadata/RetailerEpisodeID2",
+								"filterEidr": "no"
 							}
 						}
 					}
