--- a/mddf-tools/pom.xml
+++ b/mddf-tools/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-tools</artifactId>
-	<version>1.5.1.rc5</version>
+	<version>1.5.1.rc4</version>
 
 	<name>mddf-tools</name>
 	<description>Desk-top MDDF services</description>
@@ -18,7 +18,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<mddf.lib.version>1.5.1.rc4-SNAPSHOT</mddf.lib.version>
 		<mddf.tool.version>${project.version}</mddf.tool.version>
-		<mddf.tool.build>H</mddf.tool.build>
+		<mddf.tool.build>J</mddf.tool.build>
 		<build.timestamp>${maven.build.timestamp}</build.timestamp>
 		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
 	</properties>
@@ -40,7 +40,7 @@
 			<version>${mddf.lib.version}</version>
 		</dependency>
 	</dependencies>
- 
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
