--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-lib</artifactId>
-	<version>1.5.1.rc4-SNAPSHOT</version>
+	<version>1.5.1-SNAPSHOT</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
 	<url>https://github.com/MovieLabs/mddf</url>
 	<properties>
 		<mddf.lib.version>${project.version}</mddf.lib.version>
-		<mddf.lib.build>4</mddf.lib.build>
+		<mddf.lib.build>1</mddf.lib.build>
 		<mddf.lib.timestamp>${maven.build.timestamp}</mddf.lib.timestamp>
 		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
 	</properties>
