--- a/mddf-tools/pom.xml
+++ b/mddf-tools/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-tools</artifactId>
-	<version>1.5.1.rc4</version>
+	<version>1.5.1</version>
 
 	<name>mddf-tools</name>
 	<description>Desk-top MDDF services</description>
@@ -16,9 +16,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<mddf.lib.version>1.5.1.rc4-SNAPSHOT</mddf.lib.version>
+		<mddf.lib.version>1.5.1-SNAPSHOT</mddf.lib.version>
 		<mddf.tool.version>${project.version}</mddf.tool.version>
-		<mddf.tool.build>J</mddf.tool.build>
+		<mddf.tool.build>K</mddf.tool.build>
 		<build.timestamp>${maven.build.timestamp}</build.timestamp>
 		<maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss z</maven.build.timestamp.format>
 	</properties>
@@ -33,6 +33,18 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.1.0</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-json -->
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-json</artifactId>
+			<version>2.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>com.movielabs</groupId>
