add support for converting Avails from v2.4 XML to v1.8 XLSX

--- a/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
+++ b/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
@@ -1368,7 +1368,10 @@
 				}
 			},
 
-			"AvailMetadata:VolumeNumber": "{avail}VolumeMetadata/{avail}VolumeNumber/{md}Number",
+			"AvailMetadata:VolumeNumber": [
+				"{avail}VolumeMetadata/{avail}VolumeNumber/{md}Number",
+				"@volNumber"
+			],
 			"AvailMetadata:VolumeTitleDisplayUnlimited": "{avail}VolumeMetadata/{avail}VolumeTitleDisplayUnlimited",
 			"AvailMetadata:VolumeTitleInternalAlias": "{avail}VolumeMetadata/{avail}VolumeTitleInternalAlias",
 
